--- a/files/en-us/mdn/contribute/markdown_in_mdn/index.html
+++ b/files/en-us/mdn/contribute/markdown_in_mdn/index.html
@@ -6,13 +6,11 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<div class="notecard warning">
+<div class="warning">
 
-<h4>Warning</h4>
+  <p><strong>Warning:</strong> We're currently in the process of converting all MDN content from HTML into Markdown. Currently you can write pages in HTML or in Markdown, but we don't want to mix formats within a section.</p>
 
-<p>We're currently in the process of converting all MDN content from HTML into Markdown. Currently you can write pages in HTML or in Markdown, but we don't want to mix formats within a section.</p>
-
-<p>At the moment only the JavaScript documentation is in Markdown (pages under <a href="/en-US/docs/Web/JavaScript">https://developer.mozilla.org/en-US/docs/Web/JavaScript</a>), so this page only applies to that part of the site. For other parts of the site, write documentation in HTML.</p>
+  <p>At the moment the JavaScript, CSS, and Web API documentation are in Markdown, so this page applies to those parts of the site. For other parts of the site, write documentation in HTML.</p>
 
 </div>
 
@@ -32,7 +30,7 @@ tags:
 
 <p>It's permissible for the info string to contain multiple words, like:</p>
 
-<pre>
+<pre class="brush: plain">
 ```fee fi fo fum
 // some example code
 ```
@@ -58,7 +56,7 @@ In MDN, writers will use code fences for example code blocks. They must specify 
 
 For example:
 
-<pre>
+<pre class="brush: plain">
 ```js
 const greeting = "I will get syntax highlighting";
 ```
@@ -74,7 +72,7 @@ const greeting = "I will get syntax highlighting";
 
 For example:
 
-<pre>
+<pre class="brush: plain">
 ```js example-good
 const greeting = "I'm a good example";
 ```
@@ -108,7 +106,7 @@ const greeting = "I'm a good example";
 
 <h5>Note</h5>
 
-<pre>
+<pre class="brush: plain">
 &gt; **Note:** This is how you write a note.
 &gt;
 &gt; It can have multiple lines.
@@ -125,14 +123,14 @@ const greeting = "I'm a good example";
 
 <p>This HTML will be rendered as a highlighted box, like:</p>
 
-<div class="notecard note">
+<div class="note">
   <p><strong>Note:</strong> This is how you write a note.</p>
   <p>It can have multiple lines.</p>
 </div>
 
 <h5>Warnings</h5>
 
-<pre>
+<pre class="brush: plain">
 &gt; **Warning:** This is how you write a warning.
 &gt;
 &gt; It can have multiple paragraphs.
@@ -149,14 +147,14 @@ const greeting = "I'm a good example";
 
 <p>This HTML will be rendered as a highlighted box, like:</p>
 
-<div class="notecard warning">
+<div class="warning">
   <p><strong>Warning:</strong> This is how you write a warning.</p>
   <p>It can have multiple paragraphs.</p>
 </div>
 
 <h5>Callouts</h5>
 
-<pre>
+<pre class="brush: plain">
 &gt; **Callout:** **This is how you write a callout**.
 &gt;
 &gt; It can have multiple paragaphs.
@@ -182,7 +180,7 @@ const greeting = "I'm a good example";
 
 <p>For example, if we want to use "Warnung" for "Warning" in German, then in German pages we would write:</p>
 
-<pre>
+<pre class="brush: plain">
 &gt; Warnung: So schreibt man eine Warnung.
 </pre>
 
@@ -198,7 +196,7 @@ const greeting = "I'm a good example";
 
 <p>This example contains a code block.</p>
 
-<pre>
+<pre class="brush: plain">
 &gt; **Note:** This is how you write a note.
 &gt;
 &gt; It can contain code blocks.
@@ -222,7 +220,7 @@ const greeting = "I'm a good example";
 
 <p>This HTML will be rendered as with a code block, like:</p>
 
-<div class="notecard note">
+<div class="note">
   <p><strong>Note:</strong> This is how you write a note.</p>
   <p>It can contain code blocks.</p>
   <pre class="brush: js">const s = "I'm in a code block";</pre>
@@ -254,7 +252,7 @@ const greeting = "I'm a good example";
 
 For example, this is a <code>&lt;dl&gt;</code>:
 
-<pre>
+<pre class="brush: plain">
 * term1
     * : My description of term1
 
@@ -318,7 +316,7 @@ On MDN, this would produce the following HTML:
 
 <p>As a workaround for cases where an author needs to associate multiple <code>&lt;dt&gt;</code> items with a single <code>&lt;dd&gt;</code>, consider providing them as a single <code>&lt;dt&gt;</code> that holds multiple terms, separated by commas, like this:<p>
 
-<pre>
+<pre class="brush: plain">
 * `param1`, `param2`, `param3`
     * : My description of params 1, 2, and 3
 </pre>
@@ -347,7 +345,7 @@ On MDN, this would produce the following HTML:
 
 <p>That is, MDN authors must use this style:</p>
 
-<pre>
+<pre class="brush: plain">
 | Heading 1 | Heading 2 | Heading 3 |
 |-----------|-----------|-----------|
 | cell 1    | cell 2    | cell 3    |
@@ -356,7 +354,7 @@ On MDN, this would produce the following HTML:
 
 <p>and not this style:</p>
 
-<pre>
+<pre class="brush: plain">
 Heading 1 | Heading 2 | Heading 3
  --- | --- | ---
 cell 1    | cell 2    | cell 3
@@ -410,7 +408,7 @@ cell 4    | cell 5    | cell 6
 
 <p>In GFM this will look like:</p>
 
-<pre>
+<pre class="brush: plain">
   | A heading 1        | A heading 2                                                                                                                                         | A heading 3        | A heading 4                                                                                                                                                              | A heading 5        | A heading 6        |
   | ------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------ | ------------------ |
   | Something shortish | Something much longer that really goes into a lot of detail about something, so much so that the table formatting starts to look bad in GFM format. | Something shortish | Another cell with lots of text in it, that also really goes into a lot of detail about something, so much so that the table formatting starts to look bad in GFM format. | Something shortish | Something shortish |
@@ -485,7 +483,7 @@ cell 4    | cell 5    | cell 6
 
 <p>Writers will be able to include KumaScript macro calls in prose content:</p>
 
-<pre>
+<pre class="brush: plain">
 
 The **`margin`** [CSS](https://developer.mozilla.org/en-US/docs/Web/CSS) property
 sets the margin area on all four sides of an element. It is a shorthand for
