--- a/files/en-us/mdn/contribute/processes/content_bug_triage/index.html
+++ b/files/en-us/mdn/contribute/processes/content_bug_triage/index.html
@@ -123,9 +123,8 @@ tags:
 
 <p>Generally speaking, critical issues should be fixed immediately, and would probably be handled by MDN staff/peers. And Tier 1 issues are more important than Tier 2 issues. Folks that are interested in tackling the highest priority MDN issues should always tackle Tier 0 issues if any are available, before moving on to Tier 1 then Tier 2 issues.</p>
 
-<div class="note notecard">
-  <h4>Note</h4>
-  <p>For definitions of Tier 1 and Tier 2, see the <a href="/en-US/docs/MDN/Contribute/Documentation_priorities">MDN documentation priority list</a>.</p>
+<div class="note">
+  <p><strong>Note:</strong> For definitions of Tier 1 and Tier 2, see the <a href="/en-US/docs/MDN/Contribute/Documentation_priorities">MDN documentation priority list</a>.</p>
 </div>
 
 <h3 id="provide_further_information">Provide further information</h3>
@@ -134,7 +133,7 @@ tags:
 
 <p>For example:</p>
 
-<pre>To whoever fixes this issue, it looks like the following is needed:
+<pre class="brush: plain">To whoever fixes this issue, it looks like the following is needed:
 
 * Update the first paragraph below heading X to correct the problem with Y
 * Add a description of X
