--- a/files/en-us/mdn/guidelines/code_guidelines/html/index.html
+++ b/files/en-us/mdn/guidelines/code_guidelines/html/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary">The following guidelines cover how to write HTML for MDN code examples.</p>
+<p>The following guidelines cover how to write HTML for MDN code examples.</p>
 
 <h2 id="In_this_article">In this article</h2>
 
@@ -39,8 +39,8 @@ tags:
 
 <h2 id="Doctype_and_metadata">Doctype and metadata</h2>
 
-<div class="note notecard">
-<p><strong>Note</strong>: The guidelines in this section apply only when you need to show a complete HTML document. Most of the time you won't need to do this; a snippet is usually enough to demonstrate a feature. When using the <a href="/en-US/docs/MDN/Structures/Code_examples#traditional_live_samples">EmbedLiveSample macro</a>, just include the HTML snippet; it will automatically be inserted it into a full HTML document when displayed.</p>
+<div class="note">
+<p><strong>Note:</strong> The guidelines in this section apply only when you need to show a complete HTML document. Most of the time you won't need to do this; a snippet is usually enough to demonstrate a feature. When using the <a href="/en-US/docs/MDN/Structures/Code_examples#traditional_live_samples">EmbedLiveSample macro</a>, just include the HTML snippet; it will automatically be inserted it into a full HTML document when displayed.</p>
 </div>
 
 <h3 id="Doctype">Doctype</h3>
