--- a/files/en-us/mdn/guidelines/code_guidelines/javascript/index.html
+++ b/files/en-us/mdn/guidelines/code_guidelines/javascript/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary">The following guidelines cover how to write JavaScript for MDN code examples.</p>
+<p>The following guidelines cover how to write JavaScript for MDN code examples.</p>
 
 <p>The following is a fairly simple set of JavaScript guidelines. We could go a lot deeper on this, but essentially we want to provide simple guidelines for writing concise examples that will be understandable by as many people as possible, rather than detailed guidelines for writing complex web apps. If you want something that goes into more detail, we'd recommend the <a href="https://github.com/airbnb/javascript">AirBnB JavaScript Style Guide</a>, which is generally compatible with our guidelines.</p>
 
@@ -132,9 +132,8 @@ tags:
 
 <p>For general usage, you can use modern well-supported JS features (such as <a href="/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions">arrow functions</a>, <a href="/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise">promises</a>, <code><a href="/en-US/docs/Web/JavaScript/Reference/Statements/async_function">async</a></code>/<code><a href="/en-US/docs/Web/JavaScript/Reference/Operators/await">await</a></code>, <code><a href="/en-US/docs/Web/JavaScript/Reference/Statements/let">let</a></code>/<code><a href="/en-US/docs/Web/JavaScript/Reference/Statements/const">const</a></code>, <a href="/en-US/docs/Web/JavaScript/Reference/Template_literals">template literals</a>, and <a href="/en-US/docs/Web/JavaScript/Reference/Operators/Spread_syntax">spread syntax</a>) in MDN examples. We include them in many places in these guidelines, as we believe the web industry has generally gotten to the point where such features are familiar enough to be understandable. And for those that don't use them yet, we'd like to play our part in helping people to evolve their skills.</p>
 
-<div class="notecard note">
-  <h4>Note</h4>
-  <p>By "general usage", we mean general example writing. Reference pages covering specific JS features obviously need to use the features they are documenting!</p>
+<div class="note">
+  <p><strong>Note:</strong> By "general usage", we mean general example writing. Reference pages covering specific JS features obviously need to use the features they are documenting!</p>
 </div>
 
 <h2 id="Variables">Variables</h2>
@@ -156,9 +155,8 @@ let speed = distance / time;</pre>
 let s = d/t;
 </pre>
 
-<div class="notecard note">
-  <h4>Note</h4>
-  <p>The only place where it is OK to not use human-readable semantic names is where a very common recognized convention exists, such as using <code>i</code>, <code>j</code>, etc. for loop iterators.</p>
+<div class="note">
+  <p><strong>Note:</strong> The only place where it is OK to not use human-readable semantic names is where a very common recognized convention exists, such as using <code>i</code>, <code>j</code>, etc. for loop iterators.</p>
 </div>
 
 <h3 id="Declaring_variables">Declaring variables</h3>
