--- a/files/en-us/mdn/guidelines/css_style_guide/index.html
+++ b/files/en-us/mdn/guidelines/css_style_guide/index.html
@@ -11,12 +11,12 @@ tags:
 ---
 <p>{{MDNSidebar}}</p>
 
-<div class="notecard warning">
+<div class="warning">
   <p><strong>Warning:</strong> We're currently in the process of converting all MDN content from HTML into Markdown. Currently you can write pages in HTML or in Markdown, but we don't want to mix formats within a section.</p>
-  <p>At the moment only the JavaScript documentation is in Markdown (pages under <a href="/en-US/docs/Web/JavaScript">https://developer.mozilla.org/en-US/docs/Web/JavaScript</a>). So if you're writing content in that part of the site, this page is <em>not</em> applicable, and you should instead follow the guidelines in the <a href="/en-US/docs/MDN/Contribute/Markdown_in_MDN">Markdown in MDN</a> guide.</p>
+  <p>At the moment the CSS, JavaScript, and Web API documentation is in Markdown. So if you're writing content in that part of the site, this page is <em>not</em> applicable, and you should instead follow the guidelines in the <a href="/en-US/docs/MDN/Contribute/Markdown_in_MDN">Markdown in MDN</a> guide.</p>
 </div>
 
-<p class="summary"><span class="seoSummary">MDN has many built-in global styles available for use when styling and laying out articles, and this article is a guide to the available classes and when to use them.</span></p>
+<p>MDN has many built-in global styles available for use when styling and laying out articles, and this article is a guide to the available classes and when to use them.</p>
 
 <p>Please keep in that these styles have been developed to cover the most common situations that arise while styling article content, and that whenever possible, you should try to use the available classes; diverging too much from the standard content look-and-feel isn't good for consistency and readability. If you feel that your page absolutely requires some kind of special custom styling, you should <a href="/en-US/docs/MDN/Contribute/Getting_started#step_4_ask_for_help">talk to us</a> about it.</p>
 
@@ -26,7 +26,7 @@ tags:
 
 <p>To create a code example block on MDN, you wrap it in a <code>&lt;pre&gt;</code> element:</p>
 
-<pre>
+<pre class="brush: plain">
 &lt;pre&gt;p {
   color: red;
   /* This is my code example */
@@ -35,7 +35,7 @@ tags:
 
 This gives you the following output:
 
-<pre>p {
+<pre class="brush: plain">p {
   color: red;
   /* This is my code example */
 }</pre>
@@ -60,7 +60,7 @@ This gives you the following output:
 
 <p>For example, to provide CSS highlighting, you'd do this:</p>
 
-<pre>
+<pre class="brush: plain">
 &lt;pre class="brush: css"&gt;p {
   color: red;
   /* This is my code example */
@@ -146,58 +146,56 @@ function works() {
 &lt;p&gt;\{{EmbedLiveSample("Hidden_Code_Sample")}}&lt;/p&gt;
 </pre>
 
-<h4 id="Hidden_code_sample">Hidden code sample</h4>
 
-<div class="hidden">
-<h5 id="HTML">HTML</h5>
+<div id="Hidden_code">
 
-<pre class="brush: html">&lt;button id="test"&gt;Click Me&lt;/button&gt;
+<h4>Hidden code sample</h4>
+
+<pre class="brush: html hidden">&lt;button id="test"&gt;Click Me&lt;/button&gt;
 </pre>
 
-<h5 id="CSS">CSS</h5>
-
-<pre class="brush: css">button{
+<pre class="brush: css hidden">button{
     background-color: #a00;
     color:#fff;
     font-size: 20px;
 }
 </pre>
-</div>
 
-<h5 id="JavaScript">JavaScript</h5>
 
-<pre class="brush: js">document.getElementById("test").addEventListener("click", works);
+<pre class="brush: js hidden">document.getElementById("test").addEventListener("click", works);
 function works(){
     window.alert("you clicked it!");
 }
 </pre>
 
-<p>{{EmbedLiveSample("Hidden_code_sample", "100%", 150)}}</p>
+</div>
 
-<h2 id=".note.notecard">.note.notecard</h2>
+<p>{{EmbedLiveSample("Hidden_code", "100%", 150)}}</p>
+
+<h2 id=".note">.note</h2>
 
 <p>Turns a section of content into a note box, which is normally a useful note that tangentially relates to the current subject but doesn't directly fit into the flow of information.</p>
 
-<div class="notecard note">
+<div class="note">
   <p><strong>Note:</strong> This is how we usually present a note in an MDN article.</p>
 </div>
 
 <h3 id="Example_syntax_12">Example syntax</h3>
 
-<pre class="brush: html">&lt;div class="notecard note"&gt;
+<pre class="brush: html">&lt;div class="note"&gt;
   &lt;p&gt;&lt;strong&gt;Note:&lt;/strong&gt; This is how we usually present a note in an MDN article.&lt;/p&gt;
 &lt;/div&gt;</pre>
 
-<h2 id=".notecard.warning">.notecard.warning</h2>
+<h2 id=".warning">.warning</h2>
 
 <p>Turns a section of content into a warning box, which normally communicates a vital fact that the reader needs to be really careful about (e.g., they need to do something, or avoid something to avoid serious issues.)</p>
 
-<div class="notecard warning">
+<div class="warning">
   <p><strong>Warning:</strong> Here be dragons!</p>
 </div>
 
 <h3 id="Example_syntax_17">Example syntax</h3>
 
-<pre class="brush: html">&lt;div class="notecard warning"&gt;
+<pre class="brush: html">&lt;div class="warning"&gt;
   &lt;p&gt;&lt;strong&gt;Warning:&lt;/strong&gt; Here be dragons!&lt;/p&gt;
 &lt;/div&gt;</pre>
