--- a/files/en-us/mdn/guidelines/does_this_belong_on_mdn/index.html
+++ b/files/en-us/mdn/guidelines/does_this_belong_on_mdn/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p><span class="seoSummary">In this article, you'll find information describing how to decide whether or not a given topic and/or type of content should be included on MDN Web Docs.</span> We'll also consider other places you might place content, although not in depth.</p>
+<p>In this article, you'll find information describing how to decide whether or not a given topic and/or type of content should be included on MDN Web Docs. We'll also consider other places you might place content, although not in depth.</p>
 
 <h2 id="The_question">The question</h2>
 
@@ -23,8 +23,8 @@ tags:
 
 <p>Be aware that all contributions to MDN fall under specific open source licenses; these are <a href="/en-US/docs/MDN/About#copyrights_and_licenses">described in detail</a> on our <a href="/en-US/docs/MDN/About">About MDN</a> page.</p>
 
-<div class="note notecard">
-<p><strong>Note</strong>: Keep in mind that Mozilla's <a href="https://www.mozilla.org/en-US/about/legal/terms/mozilla/">Websites &amp; Communications Terms of Use</a> are in effect when you use or contribute to MDN Web Docs. Review this document to ensure that you're aware of what can and cannot be posted on Mozilla sites.</p>
+<div class="note">
+<p><strong>Note:</strong> Keep in mind that Mozilla's <a href="https://www.mozilla.org/en-US/about/legal/terms/mozilla/">Websites &amp; Communications Terms of Use</a> are in effect when you use or contribute to MDN Web Docs. Review this document to ensure that you're aware of what can and cannot be posted on Mozilla sites.</p>
 </div>
 
 <h2 id="What_topics_belong_on_MDN_Web_Docs">What topics belong on MDN Web Docs?</h2>
@@ -43,8 +43,8 @@ tags:
  <li>etc.</li>
 </ul>
 
-<div class="note notecard">
-<p><strong>Note</strong>: Back-end technologies usually have their own documentation elsewhere that MDN does not attempt to supersede, although we <a href="/en-US/docs/Learn/Server-side">do have some exceptions</a>.</p>
+<div class="note">
+<p><strong>Note:</strong> Back-end technologies usually have their own documentation elsewhere that MDN does not attempt to supersede, although we <a href="/en-US/docs/Learn/Server-side">do have some exceptions</a>.</p>
 </div>
 
 <p>Also welcome are topics that cut across technologies but are relevant to Web development, such as:</p>
@@ -57,7 +57,7 @@ tags:
  <li><a href="/en-US/docs/Games">Web-based games</a></li>
 </ul>
 
-<div class="note notecard">
+<div class="note">
 <p><strong>Note:</strong> MDN covers some non-standard features if they're exposed to the Web, especially if they find common usage; for example, we have documentation for WebKit-specific CSS properties. MDN also covers some non-web standards technologies if they are considered useful enough to web developers — see our <a href="/en-US/docs/Related">Web-related technologies</a> section.</p>
 </div>
 
