--- a/files/en-us/mdn/guidelines/video/index.html
+++ b/files/en-us/mdn/guidelines/video/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary">MDN Web Docs is not a very video-heavy site, but there are certain places where video content makes sense to use as part of an article. <span class="seoSummary">This article discusses when including videos in MDN articles is appropriate, and provides tips on how to create simple but effective videos on a budget.</span></p>
+<p>MDN Web Docs is not a very video-heavy site, but there are certain places where video content makes sense to use as part of an article. This article discusses when including videos in MDN articles is appropriate, and provides tips on how to create simple but effective videos on a budget.</p>
 
 <h2 id="When_to_use_video_on_MDN">When to use video on MDN</h2>
 
@@ -32,8 +32,8 @@ tags:
  </li>
 </ul>
 
-<div class="note notecard">
-<p><strong>Note</strong>: It’s worth keeping these problems in mind, even when you are making videos, so you can try to alleviate some of them.</p>
+<div class="note">
+<p><strong>Note:</strong> It’s worth keeping these problems in mind, even when you are making videos, so you can try to alleviate some of them.</p>
 </div>
 
 <p>There are many popular video sites that provide a lot of video tutorials. MDN isn't a video-driven site, but video does have a place on MDN in certain contexts.</p>
@@ -183,8 +183,8 @@ tags:
  <li>Plan zoom levels for the parts of the UI that you’re going to show. Not everyone will be able to view your video in high definition. You will be able to zoom particular parts in post-production, but it’s a good idea to zoom the app beforehand as well.</li>
 </ul>
 
-<div class="note notecard">
-<p><strong>Note</strong>: Don’t zoom so far that the UIs you are showing start to look unfamiliar or ugly.</p>
+<div class="note">
+<p><strong>Note:</strong> Don’t zoom so far that the UIs you are showing start to look unfamiliar or ugly.</p>
 </div>
 
 <h3 id="Recording">Recording</h3>
@@ -193,8 +193,8 @@ tags:
 
 <p>Remember to pause for a second or two at the end, to show the result of the flow.</p>
 
-<div class="note notecard">
-<p><strong>Note</strong>: If you are using a really simple tool like QuickTime Player and post production is not an option for some reason, you should get your windows set up in the right size to show the area you want to show. In the Firefox DevTools, you can use the <a href="/en-US/docs/Tools/Rulers">Rulers Tool</a> to make sure the viewport is at the right aspect ratio for the recording.</p>
+<div class="note">
+<p><strong>Note:</strong> If you are using a really simple tool like QuickTime Player and post production is not an option for some reason, you should get your windows set up in the right size to show the area you want to show. In the Firefox DevTools, you can use the <a href="/en-US/docs/Tools/Rulers">Rulers Tool</a> to make sure the viewport is at the right aspect ratio for the recording.</p>
 </div>
 
 <h3 id="Post-production">Post-production</h3>
@@ -216,8 +216,8 @@ tags:
 
 <p>Videos currently have to be uploaded to YouTube to be displayed on MDN, for example the <a href="https://www.youtube.com/user/mozhacks/videos">mozhacks</a> channel. Ask a member of MDN staff to upload the video if you don't have somewhere appropriate to put it.</p>
 
-<div class="note notecard">
-<p><strong>Note</strong>: Mark the video as "unlisted" if it doesn’t make sense out of the context of the page (if it’s a short video, then it probably doesn't).</p>
+<div class="note">
+<p><strong>Note:</strong> Mark the video as "unlisted" if it doesn’t make sense out of the context of the page (if it’s a short video, then it probably doesn't).</p>
 </div>
 
 <h3 id="Embedding">Embedding</h3>
