--- a/files/en-us/mdn/contribute/documentation_priorities/index.html
+++ b/files/en-us/mdn/contribute/documentation_priorities/index.html
@@ -115,9 +115,8 @@ tags:
 
 <h3 id="dom">DOM (439)</h3>
 
-<div class="note notecard">
-  <h4>Note</h4>
-  <p>"DOM" is only a partial group — we only included the interface docs with the highest page views, to keep the size of Tier 1 down to a manageable number. Other DOM interfaces not in this list are in Tier 2.</p>
+<div class="note">
+  <p><strong>Note:</strong> "DOM" is only a partial group — we only included the interface docs with the highest page views, to keep the size of Tier 1 down to a manageable number. Other DOM interfaces not in this list are in Tier 2.</p>
 </div>
 
 <ul>
@@ -138,9 +137,8 @@ tags:
 
 <h3 id="dom_events">DOM Events (22)</h3>
 
-<div class="note notecard">
-  <h4>Note</h4>
-  <p>"DOM Events" is only a partial group — we only included the interface docs with the highest page views, to keep the size of Tier 1 down to a manageable number. Other DOM Events interfaces not in this list are in Tier 2.</p>
+<div class="note">
+  <p><strong>Note:</strong> "DOM Events" is only a partial group — we only included the interface docs with the highest page views, to keep the size of Tier 1 down to a manageable number. Other DOM Events interfaces not in this list are in Tier 2.</p>
 </div>
 
 <ul>
@@ -168,9 +166,8 @@ tags:
 
 <h3 id="html_dom">HTML DOM (371)</h3>
 
-<div class="note notecard">
-  <h4>Note</h4>
-  <p>"HTML DOM" is only a partial group — we only included the interface docs with the highest page views, to keep the size of Tier 1 down to a manageable number. Other HTML DOM interfaces not in this list are in Tier 2.</p>
+<div class="note">
+  <p><strong>Note:</strong> "HTML DOM" is only a partial group — we only included the interface docs with the highest page views, to keep the size of Tier 1 down to a manageable number. Other HTML DOM interfaces not in this list are in Tier 2.</p>
 </div>
 
 <ul>
