--- a/files/en-us/mdn/contribute/howto/update_the_css_json_db/index.html
+++ b/files/en-us/mdn/contribute/howto/update_the_css_json_db/index.html
@@ -6,9 +6,11 @@ tags:
   - Howto
   - MDN Meta
 ---
-<div>{{MDNSidebar}}</div><p id="Prerequisite_resources">Several characteristics of a CSS property, like its syntax or if it can be animated, are mentioned in multiple pages on MDN and are therefore stored in an ad-hoc "database". This database actually consists of several JSON files containing CSS related information, which are <a href="https://github.com/mdn/data/tree/master/css">stored on GitHub</a>. This article describes how to update this structure.</p>
+<div>{{MDNSidebar}}</div>
 
-<h2 id="Prerequisite_resources_2">Prerequisite resources</h2>
+<p>Several characteristics of a CSS property, like its syntax or if it can be animated, are mentioned in multiple pages on MDN and are therefore stored in an ad-hoc "database". This database actually consists of several JSON files containing CSS related information, which are <a href="https://github.com/mdn/data/tree/master/css">stored on GitHub</a>. This article describes how to update this structure.</p>
+
+<h2 id="Prerequisite_resources">Prerequisite resources</h2>
 
 <p>To update or check the content of the CSS JSON DB, you will need to gather information from different sources.</p>
 
@@ -16,15 +18,15 @@ tags:
  <li><strong>Latest spec</strong><br>
   Whether it is a W3C Recommendation or an early editor's draft, you should refer to the latest available draft of the spec that covers (or specifies that cover) that feature. To find it, you can usually do a web search. The latest version will often be linked to from all versions of the spec, listed under "latest draft" or similar.</li>
  <li><strong>Latest web browsers</strong><br>
-  These should be experimental/alpha builds such as <a class="external external-icon" href="https://nightly.mozilla.org/">Firefox Nightly</a>/<a class="external external-icon" href="https://www.google.com/intl/en/chrome/browser/canary.html">Chrome Canary</a> that are more likely to support the features you are documenting. This is especially pertinent if you are documenting a nascent/experimental feature.</li>
+  These should be experimental/alpha builds such as <a href="https://nightly.mozilla.org/">Firefox Nightly</a>/<a href="https://www.google.com/intl/en/chrome/browser/canary.html">Chrome Canary</a> that are more likely to support the features you are documenting. This is especially pertinent if you are documenting a nascent/experimental feature.</li>
  <li><strong>Additional info</strong><br>
   Find as much info as you can to better understand how the specific feature works. E.g. blog posts or demos are good resources.</li>
  <li><strong>Engineering contacts</strong><br>
   It is really useful to find yourself a friendly engineering contact to ask questions about the spec, someone who is involved in the standardization of the API, or its implementation in a browser. If you have the implementation bug on Bugzilla, the engineer who implemented the feature is a good contact: asking him in the bug, with a needinfo flag is a good way of having an answer about a specific question. Other good places to find knowledgeable people are:
   <ul>
    <li>Your internal company address book, if you work for a relevant company.</li>
-   <li>A public mailing list that is involved in the discussion of that API,  such as Mozilla's <a class="external external-icon" href="https://lists.mozilla.org/listinfo/dev-platform">dev-platform</a> list, or the W3C list <a class="external external-icon" href="https://lists.w3.org/Archives/Public/www-style/">www-style</a>.</li>
-   <li>The spec itself. For example, the <a class="external external-icon" href="https://drafts.csswg.org/css-animations/">CSS Animations spec</a> lists the authors and their contact details at the top.</li>
+   <li>A public mailing list that is involved in the discussion of that API,  such as Mozilla's <a href="https://lists.mozilla.org/listinfo/dev-platform">dev-platform</a> list, or the W3C list <a href="https://lists.w3.org/Archives/Public/www-style/">www-style</a>.</li>
+   <li>The spec itself. For example, the <a href="https://drafts.csswg.org/css-animations/">CSS Animations spec</a> lists the authors and their contact details at the top.</li>
   </ul>
  </li>
 </ol>
