--- a/files/en-us/mdn/contribute/processes/matching_features_to_browser_version/index.html
+++ b/files/en-us/mdn/contribute/processes/matching_features_to_browser_version/index.html
@@ -23,15 +23,15 @@ tags:
 ---
 <p>{{Draft}}{{MDNSidebar}}</p>
 
-<p>When contributing to the documentation on the MDN web docs site, you will often need to locate and identify version-specific details for a given browser, such as which versions of each major browser implement support for the feature you're documenting. <span class="seoSummary">This article provides tips and pointers to help you figure out which version of each major browser introduced a given feature, and when it was enabled by default.</span></p>
+<p>When contributing to the documentation on the MDN web docs site, you will often need to locate and identify version-specific details for a given browser, such as which versions of each major browser implement support for the feature you're documenting. This article provides tips and pointers to help you figure out which version of each major browser introduced a given feature, and when it was enabled by default.</p>
 
-<div class="notecard note">
-<p>In this article, the term <strong>feature</strong> is used to refer to anything that might need to be documented on MDN. This includes APIs, HTML elements, new HTML attributes, new CSS properties, new possible values for CSS properties, and so forth. Anything that needs to be documented, from very small to very large.</p>
+<div class="note">
+  <p><strong>Note:</strong> In this article, the term <strong>feature</strong> is used to refer to anything that might need to be documented on MDN. This includes APIs, HTML elements, new HTML attributes, new CSS properties, new possible values for CSS properties, and so forth. Anything that needs to be documented, from very small to very large.</p>
 </div>
 
 <h2 id="Chrome">Chrome</h2>
 
-<p>There are various ways to locate information about the release of a feature on Chrome. Some of them are quite easy but less likely to provide the details you need, while others take some significant work but are much more likely to provide precise details.</p>
+<p>There are various ways to locate information about the release of a feature on Chrome. Some of them are quite easy but less likely to provide the details you need, while others take some significant work but are much more likely to provide precise details.</p>
 
 <h3 id="Useful_resources">Useful resources</h3>
 
@@ -56,7 +56,7 @@ tags:
 
 <p>For example, given the string <code>05b49ea1</code>, the tool first looks for a match among the full commit changeset numbers, finds none, then looks at the prefixed short commits:</p>
 
-<p><img alt="Screenshot of the Chromium project's Find Releases tool" src="find-releases-tool.png" style="border-style: solid; border-width: 1px;"></p>
+<p><img alt="Screenshot of the Chromium project's Find Releases tool" src="find-releases-tool.png" /></p>
 
 <p>Here, we see that changeset <code>05b49ea1</code> was first landed for Chrome 56, but was then backported to Chrome 55 and was presumably shipped there. This assumes the feature was not backed out at some point, and it's important to check on this.</p>
 
@@ -140,7 +140,7 @@ tags:
 
 <p>The specific appearance of the display will vary depending on what tool you're using to view the blame information; for example, Mozilla DXR's <a href="https://hg.mozilla.org/mozilla-central/annotate/c2593a3058afdfeaac5c990e18794ee8257afe99/dom/webidl/RTCPeerConnection.webidl#l">output for the <code>RTCPeerConnection.webidl</code> file</a> looked like this when this article was written:</p>
 
-<p><img alt="" src="hg-tooltip-revision.png" style="border-style: solid; border-width: 1px;"></p>
+<p><img alt="" src="hg-tooltip-revision.png"></p>
 
 <p>Here, the mouse is pointing at a row with the revision number <code>199991</code> beside it. This has opened up a tooltip with details about that revision: It was created for bug 1032835, entitled "addTrack/removeTrack on-top of existing implementation". The tooltip includes several links which can be helpful:</p>
 
@@ -157,7 +157,7 @@ tags:
  <dd>A link to the overview page for the entire changeset that includes the changes made to this line of code. This page should give you the information you require; see {{anch("From a Mercurial changeset number")}} for details.</dd>
 </dl>
 
-<div class="notecard note">
+<div class="note">
 <p><strong>Note:</strong> If you aren't able to find the change because it apparently happens before Firefox was migrated to Mercurial from CVS, try using Mercurial blame on the <a href="https://hg.mozilla.org/mozilla-unified/">Unified Firefox repository</a>, which has tags in place, each representing the code state at specific points in the history of the project, including each beta and each release build. See {{SectionOnPage("/en-US/docs/MDN/Contribute/Processes/Browser_information_resources", "Unified Firefox repository")}} for details.</p>
 </div>
 
@@ -167,7 +167,7 @@ tags:
 
 <p>Consider {{bug(1435161)}}. This bug covers implementing the {{domxref("PaymentResponse.retry()")}} method. If you look at that bug, you'll see the information you need right there at the top:</p>
 
-<p><img alt='Screenshot showing "RESOLVED FIXED in Firefox 64" at the top of the Bugzilla screen' src="bugzilla-fixedin-top.png" style="border-style: solid; border-width: 1px;"></p>
+<p><img alt='Screenshot showing "RESOLVED FIXED in Firefox 64" at the top of the Bugzilla screen' src="bugzilla-fixedin-top.png" ></p>
 
 <p>Right below the bug summary, you see the text "RESOLVED FIXED in Firefox 64". This corresponds to the presence of the tracking flag named <code>firefox45</code> having the value <code>fixed</code>.  On older bugs, before the release-numbered tracking flags were added, you might instead find one of these:</p>
 
@@ -175,12 +175,12 @@ tags:
  <li>
   <p>A tracking flag named <code>relnote-firefox</code> with the status set to the version of Firefox the feature arrived in. This tracking flag is intended to indicate when a feature needs to be mentioned in the release notes for the browser, but serves just as well to tell us when a feature was added.</p>
 
-  <p><img alt="Screenshot showing the relnote-firefox tracking flag used to indicate a version number" src="bugzilla-relnote-firefox.png" style="border-style: solid; border-width: 1px;"></p>
+  <p><img alt="Screenshot showing the relnote-firefox tracking flag used to indicate a version number" src="bugzilla-relnote-firefox.png"></p>
  </li>
  <li>
   <p>The Target field in the Tracking group in Bugzilla is set to <code>mozillaN</code>, where <code>N</code> is the version number of Firefox. The trick to watch for is that this is sometimes inaccurate, as it represents when it was hoped to ship, not necessarily when it was actually released. Be sure to review the comments on the bug to ensure that it didn't miss its planned release.</p>
 
-  <p><img alt='Screenshot showing the Bugzilla Target field indicating a release target of "mozilla15" or Firefox 15' src="bugzilla-target.png" style="border-style: solid; border-width: 1px;"></p>
+  <p><img alt='Screenshot showing the Bugzilla Target field indicating a release target of "mozilla15" or Firefox 15' src="bugzilla-target.png"></p>
  </li>
 </ul>
 
@@ -231,17 +231,17 @@ tags:
 
 <p>Once in the WebIDL file, click the "Blame" link under "VCS Links" in the Navigation box near the top-right corner of the DXR page.</p>
 
-<p><img alt="Screenshot of the DXR Navigation box" src="dxr-navigation-box.png" style="border-style: solid; border-width: 1px;"></p>
+<p><img alt="Screenshot of the DXR Navigation box" src="dxr-navigation-box.png"></p>
 
 <p>Once in the blame view, hover the mouse cursor over the revision number at the left side of the WebIDL on the same line as (or the first revision number found immediately above) the line of WebIDL corresponding to the feature you're interested in. For example, if you're looking for when the <code>RTCPeerConnection</code> method <code>addTrack()</code> was added to Firefox:</p>
 
-<p><img alt="" src="hg-tooltip-revision.png" style="border-style: solid; border-width: 1px;"></p>
+<p><img alt="" src="hg-tooltip-revision.png"></p>
 
 <p>This shows you information about the changeset; if the information shown is what you're looking for, click the <code>changeset</code> link in the tooltip popup, then see {{anch("From a Mercurial changeset number")}} for details on how to get the version information you need from there.</p>
 
 <p>If you can't find the changeset you need just by browsing the blame page, the next thing to try is to look through the revision history. Click on the <code>revisions</code> link at the top of the Mercurial blame page, or the "Log" link in the Navigation box on the DXR page. This will present a list of every changeset that altered the file you're looking at. Look for a revision that matches the feature change you're interested in; if you find a promising revision, click the <code>diff</code> link next to that revision.</p>
 
-<p><img alt="" src="hg-revisions-ontrack.png" style="border-style: solid; border-width: 1px;"></p>
+<p><img alt="" src="hg-revisions-ontrack.png"></p>
 
 <p>This takes you to the changeset details page. From here, you can collect the information you need as covered in {{anch("From a Mercurial changeset number")}}.</p>
 
@@ -266,7 +266,7 @@ tags:
  <li>To locate the code implementing a property or other ID on an element, run the command file: <kbd>file:Elementname id:propertyname</kbd>. For instance, to locate the code implementing the <code>HTMLMediaElement</code> property <code>duration</code>, run the search <kbd>file:HTMLMediaElement id:duration</kbd>.</li>
 </ul>
 
-<div class="notecard note">
+<div class="note">
 <p><strong>Note:</strong> If none of those tips for searching DXR help, click on the "Operators" button at the far right end of the search box. This will open a panel listing all the keywords you can use to perform special searches, such as <code>type:</code> to look for data types or classes in C, Python, or Rust source files.</p>
 </div>
 
@@ -297,7 +297,7 @@ tags:
 
 <p>For example, if I have the changeset number <code>79525105ef9a</code>, I want to visit <a href="https://hg.mozilla.org/mozilla-central/rev/79525105ef9a">https://hg.mozilla.org/mozilla-central/rev/79525105ef9a</a>. This brings up a page that looks like this:</p>
 
-<p><img alt="" src="hg-changeset.png" style="border-style: solid; border-width: 1px;"></p>
+<p><img alt="" src="hg-changeset.png"></p>
 
 <p>Below this is a list of the files that changed followed by the actual diffs showing the specific changes made.</p>
 
@@ -381,6 +381,6 @@ skip-if = os == 'android'</pre>
  </li>
 </ul>
 
-<div class="notecard warning">
-<p>Version numbers listed in the documentation at <a href="https://developer.apple.com/documentation/webkitjs">https://developer.apple.com/documentation/webkitjs</a> are inaccurate.  Please use other resources to determine the version numbers.</p>
+<div class="warning">
+<p><strong>Warning:</strong> Version numbers listed in the documentation at <a href="https://developer.apple.com/documentation/webkitjs">https://developer.apple.com/documentation/webkitjs</a> are inaccurate.  Please use other resources to determine the version numbers.</p>
 </div>
