--- a/files/en-us/mdn/guidelines/code_guidelines/general/index.html
+++ b/files/en-us/mdn/guidelines/code_guidelines/general/index.html
@@ -10,7 +10,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary">The following code example guidelines apply to all code, whether we are talking about HTML, CSS, JavaScript, or something else.</p>
+<p>The following code example guidelines apply to all code, whether we are talking about HTML, CSS, JavaScript, or something else.</p>
 
 <h2 id="In_this_article">In this article</h2>
 
@@ -91,8 +91,8 @@ tags:
 <p>Sometimes you'll want to include images or other media in an example. If you do:</p>
 
 <ul>
- <li>Make sure their license allows you to use them. Try to use media that has a very permissive license such as <a href="https://creativecommons.org/share-your-work/public-domain/cc0/" rel="nofollow">CC0</a>, or at least one that is compatible with our general content license —  <a class="external text external-icon" href="https://creativecommons.org/licenses/by-sa/2.5/" rel="nofollow noopener">Creative Commons Attribution-ShareAlike license</a> (CC-BY-SA).</li>
- <li>For images, run them through <a href="https://tinypng.com" rel="nofollow">https://tinypng.com</a> or <a href="https://imageoptim.com" rel="nofollow">https://imageoptim.com</a>, to reduce the page weight of the examples.</li>
+ <li>Make sure their license allows you to use them. Try to use media that has a very permissive license such as <a href="https://creativecommons.org/share-your-work/public-domain/cc0/">CC0</a>, or at least one that is compatible with our general content license —  <a href="https://creativecommons.org/licenses/by-sa/2.5/">Creative Commons Attribution-ShareAlike license</a> (CC-BY-SA).</li>
+ <li>For images, run them through <a href="https://tinypng.com">https://tinypng.com</a> or <a href="https://imageoptim.com">https://imageoptim.com</a>, to reduce the page weight of the examples.</li>
  <li>For <code>SVG</code>, run the code through <a href="https://jakearchibald.github.io/svgomg/">SVGOMG</a>, and ensure that the <code>SVG</code> file has an empty line at the end of the file.</li>
  <li>
   <p>When displaying icons on a page (e.g. via {{cssxref("background-image")}}), use icons from the <a href="https://github.com/mdn/mdn-dinocons">mdn-dinocons</a> repository, where appropriate, and try to match their style in other cases.</p>
