--- a/files/en-us/mdn/structures/banners_and_notices/index.html
+++ b/files/en-us/mdn/structures/banners_and_notices/index.html
@@ -8,7 +8,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p><span class="seoSummary">Sometimes, an article needs a special notice added to it. This might happen if the page covers deprecated technology or other material that shouldn't be used in production code. This article covers the most common such cases and what to do.</span></p>
+<p>Sometimes, an article needs a special notice added to it. This might happen if the page covers deprecated technology or other material that shouldn't be used in production code. This article covers the most common such cases and what to do.</p>
 
 <h2 id="How_to_add_notice_boxes">How to add notice boxes</h2>
 
@@ -16,8 +16,8 @@ tags:
 
 <p>To do this, you insert the macro call at the top of the article, and add the new tag to the list. Once you've done that, raise a pull request and get your changes reviewed and merged. From then on, an appropriate banner will appear on the page, and any macros that reference page tags when looking for up-to-date articles will know that the page you've updated is deprecated, or whatever.</p>
 
-<div class="note notecard">
-  <p><strong>Note</strong>: To learn more about editing, see our <a href="https://github.com/mdn/content">content repo README</a>.</p>
+<div class="note">
+  <p><strong>Note:</strong> To learn more about editing, see our <a href="https://github.com/mdn/content">content repo README</a>.</p>
 </div>
 
 <p>Sometimes, you might want to flag just a single item in a list of items, or in a table, as obsolete, deprecated, or the like. There are special versions of each of the following macros for that; change "_header" to "_inline" to the end of the macro's name.</p>
