--- a/files/en-us/mdn/structures/code_examples/index.html
+++ b/files/en-us/mdn/structures/code_examples/index.html
@@ -13,7 +13,7 @@ tags:
 ---
 <div>{{MDNSidebar}}</div>
 
-<p class="summary">On MDN, you'll see numerous code examples inserted throughout the pages to demonstrate usage of web platform features. This article discusses the different mechanisms available for adding code examples to pages, along with which ones you should use and when.</p>
+<p>On MDN, you'll see numerous code examples inserted throughout the pages to demonstrate usage of web platform features. This article discusses the different mechanisms available for adding code examples to pages, along with which ones you should use and when.</p>
 
 <h2 id="What_types_of_code_example_are_available">What types of code example are available?</h2>
 
@@ -63,7 +63,7 @@ console.log(test);</pre>
 
 <p>Optionally, you might want to show a static image of the code's resulting output. For example:</p>
 
-<p><img alt="" src="console-example.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="console-example.png"></p>
 
 <h2 id="Traditional_live_samples">Traditional live samples</h2>
 
